--- a/src/main/resources/templates/page_layout/footer.html
+++ b/src/main/resources/templates/page_layout/footer.html
@@ -9,6 +9,9 @@
 <footer class="mastfoot mt-auto" th:fragment="header">
   <div class="inner">
     <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+    <p>Authors:
+      <p><a href="https://github.com/KyriakosKarda/Project-DS-Street_Food_Go" target="_blank">@Kyriakos Kardabikis @Angelliki Vasili @Spyridon Xenos</a></p>
+
   </div>
 </footer>
 </body>
