--- a/src/main/resources/templates/page_layout/header.html
+++ b/src/main/resources/templates/page_layout/header.html
@@ -4,17 +4,17 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+
 </head>
 <body>
 
 <header class="masthead mb-auto" th:fragment="header">
     <div class="inner">
-        <h3 class="masthead-brand">Cover</h3>
+        <h3 class="masthead-brand" style="color: red">Street Food Go</h3>
         <nav class="nav nav-masthead justify-content-center">
-<!--            <a class="nav-link active" href="/">Home</a>-->
-<!--            <a class="nav-link" href="/student">Students</a>-->
-<!--            <a class="nav-link" href="#">Contact</a>-->
+            <a class="nav-link active" href="/">Home</a>
+            <a class="nav-link" href="/login">Login</a>
+            <a class="nav-link" href="/register">Register</a>
         </nav>
     </div>
 </header>
