--- a/src/main/resources/templates/page_layout/layout.html
+++ b/src/main/resources/templates/page_layout/layout.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
 
-    <title>Cover Template for Bootstrap</title>
+    <title layout:title-pattern="$CONTENT_TITLE - Street - Food Go">Fake_Efood</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/cover/">
 
