--- a/src/main/resources/templates/page_layout/header.html
+++ b/src/main/resources/templates/page_layout/header.html
@@ -13,8 +13,9 @@
         <h3 class="masthead-brand" style="color: red">Street Food Go</h3>
         <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="/">Home</a>
-            <a class="nav-link" href="/login">Login</a>
-            <a class="nav-link" href="/register">Register</a>
+            <a class="nav-link active" href="/restaurants">available-restaurants</a>
+            <a class="nav-link active" href="/login">Login</a>
+            <a class="nav-link active" href="/register">Register</a>
         </nav>
     </div>
 </header>
