--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,15 +9,20 @@
     <title>Login Page</title>
 </head>
 <section layout:fragment="main-content">
-    <form th:action="@{/}" method="GET">
+    <form th:action="@{/login}" method="POST" th:object="${person}">
         <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" id="username" class="form-control">
+            <input type="text" id="username" class="form-control" th:field="*{name}">
         </div>
 
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" id="password" class="form-control">
+            <input type="password" id="password" class="form-control" th:field="*{passwordHash}">
+        </div>
+        <div class="form-group">
+            <div th:if="${error == '?error'}">
+                <p style="color: red" th:text="'User Does Not Exist'"></p>
+            </div>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
