--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,9 +10,10 @@
 
 <section layout:fragment="main-content">
   <form th:action="@{/register}" method="POST" th:object="${person}">
+    <h1>Registration Form</h1>
     <div class="form-group">
-      <label for="type"></label>
-      <select id="type" name="type" class="form-control" th:field="*{personType}">
+      <label for="type">Category Of Registration</label>
+      <select id="type" name="type" class="form-control" th:field="*{personType}" required>
         <option disabled selected value="">--- Choose Me ---</option>
         <option th:value="'OWNER'">OWNER</option>
         <option th:value="'CUSTOMER'">CUSTOMER</option>
@@ -21,35 +22,37 @@
 
     <div class="form-group">
       <label for="firstName">First Name</label>
-      <input type="text" id="firstName" class="form-control" th:field="*{name}">
+      <input type="text" id="firstName" class="form-control" th:field="*{name}" required>
     </div>
 
     <div class="form-group">
       <label for="lastName">Last Name</label>
-      <input type="text" id="lastName" class="form-control" th:field="*{surname}">
+      <input type="text" id="lastName" class="form-control" th:field="*{surname}" required>
     </div>
 
     <div class="form-group">
       <label for="email">Email</label>
-      <input type="email" id="email" class="form-control" th:field="*{emailAddress}">
+      <input type="email" id="email" class="form-control" th:field="*{emailAddress}" required>
     </div>
 
     <div class="form-group">
       <label for="phone">Cell-Phone</label>
-      <input type="text" id="phone" class="form-control" th:field="*{phoneNumber}">
+      <input type="text" id="phone" class="form-control" th:field="*{phoneNumber}" required>
     </div>
 
     <div class="form-group">
-      <label for="address">address</label>
-      <input type="text" id="address" class="form-control" th:field="*{address}">
+      <label for="address">Address</label>
+      <input type="text" id="address" class="form-control" th:field="*{address}" required>
     </div>
 
     <div class="form-group">
       <label for="password">Password</label>
-      <input type="password" id="password" class="form-control" th:field="*{passwordHash}">
+      <input type="password" id="password" class="form-control" th:field="*{passwordHash}" required>
     </div>
 
-
+    <div class="form-group" th:if="${error != null}">
+      <p style="color: red" th:text="${error}"></p>
+    </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 </section>
