--- a/src/main/resources/templates/showMenu.html
+++ b/src/main/resources/templates/showMenu.html
@@ -5,14 +5,14 @@
       layout:decorate="~{page_layout/layout}">
 <header>
     <meta charset="UTF-8">
-    <title>menu</title>
+    <title>Menu</title>
 </header>
 <section layout:fragment="main-content">
 
 <table class="table">
+    <div class="container-fluid"><h1>Catalog of Foods</h1></div>
     <thead>
         <tr>
-            <th>Id</th>
             <th>Name</th>
             <th>Description</th>
             <th>Price</th>
@@ -20,12 +20,11 @@
         </tr>
     </thead>
     <tbody>
-        <tr th:each="product : ${products}">
-            <td th:text="${product.id}"></td>
-            <td th:text="${product.getName()}"></td>
-            <td th:text="${product.getDescription()}"></td>
-            <td th:text="${product.getPrice()}"></td>
-            <td th:text="${product.getRestaurant().getRestName()}"></td>
+        <tr th:each="menuItem : ${products}">
+            <td th:text="${menuItem.name}"></td>
+            <td th:text="${menuItem.description}"></td>
+            <td th:text="${menuItem.price} + ' €'"></td>
+            <td th:text="${menuItem.getRestaurant().getRestName()}"></td>
         </tr>
     </tbody>
 </table>
