--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,20 +9,20 @@
     <title>Login Page</title>
 </head>
 <section layout:fragment="main-content">
-    <form th:action="@{/login}" method="POST" th:object="${person}">
+    <form th:action="@{/login}" method="POST">
         <h1>Login Page</h1>
         <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" id="username" class="form-control" th:field="*{name}">
+            <input type="text" id="username" class="form-control" name="username" placeholder="Add Your First Name">
         </div>
 
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" id="password" class="form-control" th:field="*{passwordHash}">
+            <input type="password" id="password" class="form-control" name="password" placeholder="Password">
         </div>
         <div class="form-group">
-            <div th:if="${error == '?error'}">
-                <p style="color: red" th:text="'User Does Not Exist'"></p>
+            <div th:if="${param.error}">
+                <p style="color: red" th:text="'Invalid UserName Or Password'"></p>
             </div>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
