--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -8,6 +8,7 @@
     <title>Orders</title>
 </head>
 <section layout:fragment="main-content">
+    <div class="row justify-content-center">
     <h1>All The Orders</h1>
     <table class="table">
         <thead>
@@ -43,5 +44,6 @@
         </tbody>
 
     </table>
+    </div>
 </section>
 </html>
