--- a/src/main/resources/templates/page_layout/header.html
+++ b/src/main/resources/templates/page_layout/header.html
@@ -14,19 +14,15 @@
         <h4 class="masthead-brand" style="color: red">Street Food Go</h4>
         <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="/">Home</a>
-            <a class="nav-link active" href="/restaurants">Available Restaurants</a>
+            <a sec:authorize="hasRole('CUSTOMER') or isAnonymous()" class="nav-link active" href="/restaurants">Available Restaurants</a>
             <a sec:authorize="!isAuthenticated()" class="nav-link active" href="/login">Login</a>
             <a sec:authorize="!isAuthenticated()" class="nav-link active" href="/register">Register</a>
-
+            <a sec:authorize="hasRole('OWNER')" class="nav-link active" href="/restaurant">My Restaurants</a>
             <a sec:authorize="isAuthenticated()" class="nav-link">
                     <form th:action="@{/logout}" method="POST">
                         <input type="submit" class="btn btn-primary" value="Sign Out">
                     </form>
             </a>
-
-
-
-
         </nav>
     </div>
 </header>
