--- a/src/main/resources/templates/editProduct.html
+++ b/src/main/resources/templates/editProduct.html
@@ -9,10 +9,11 @@
 </header>
 <body>
 <section layout:fragment="main-content">
-    <form th:action="@{/}" th:object="${product}" method="POST">
+    <form th:action="@{'/product/edit/'+ ${prod_id} + '/' + ${rest_id}}" th:object="${product}" method="POST">
         <h1>Edit Product</h1>
         <div class="form-group">
             <label for="firstName">Product Name</label>
+            <input type="hidden" th:field="*{id}">
             <input type="text" id="firstName" th:field="*{name}" class="form-control" required>
         </div>
 
@@ -23,9 +24,10 @@
 
         <div class="form-group">
             <label for="price">Price</label>
-            <input type="number" id="price" class="form-control" th:field="*{price}"  required>
+            <input type="text" id="price" class="form-control" th:field="*{price}"  required>
         </div>
 
+        <input type="hidden" th:field="*{restaurant}">
         <div class="form-group" th:if="${error != null}">
             <p style="color: red" th:text="${error}"></p>
         </div>
