owner's menu can change status of the order also added dashboard for selecting active/pending/rejected orders

--- a/src/main/resources/templates/edit_restaurant.html
+++ b/src/main/resources/templates/edit_restaurant.html
@@ -5,7 +5,7 @@
       layout:decorate="~{page_layout/layout}">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Edit Restaurant</title>
 </head>
 <section layout:fragment="main-content">
     <form th:action="'/restaurant/'+ ${rest_id}" th:object="${res}" method="post"><br>
