--- a/src/main/resources/templates/restaurant.html
+++ b/src/main/resources/templates/restaurant.html
@@ -8,7 +8,7 @@
     <title>Restaurant</title>
 </head>
 <section layout:fragment="main-content">
-    <h1>Edit Your Restaurant</h1>
+    <h1>Edit Your Restaurant Details</h1>
 
     <table class="table">
         <thead>
