--- a/src/main/resources/templates/page_layout/header.html
+++ b/src/main/resources/templates/page_layout/header.html
@@ -19,6 +19,7 @@
             <a sec:authorize="!isAuthenticated()" class="nav-link active" href="/register">Register</a>
             <a sec:authorize="hasRole('OWNER')" class="nav-link active" href="/restaurant">My Restaurants</a>
             <a sec:authorize="hasRole('OWNER')" class="nav-link active" href="/menu">Edit My Menu</a>
+            <a sec:authorize="hasRole('OWNER')" class="nav-link active" href="/order/restaurant">Edit Your Orders</a>
             <a sec:authorize="isAuthenticated()" class="nav-link">
                     <form th:action="@{/logout}" method="POST">
                         <input type="submit" class="btn btn-primary" value="Sign Out">
