--- a/src/main/resources/templates/owners_product_menu.html
+++ b/src/main/resources/templates/owners_product_menu.html
@@ -5,7 +5,7 @@
       layout:decorate="~{page_layout/layout}">
 <head>
     <meta charset="UTF-8">
-    <title>Owner's Menu</title>
+    <title>Menu</title>
 </head>
 <section layout:fragment="main-content">
     <br>
