--- a/src/main/resources/templates/product_menu_edit.html
+++ b/src/main/resources/templates/product_menu_edit.html
@@ -2,11 +2,10 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{page_layout/layout}"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+      layout:decorate="~{page_layout/layout}">
 <head>
     <meta charset="UTF-8">
-    <title>Edit Products</title>
+    <title>Edit Menu</title>
 </head>
 <section layout:fragment="main-content">
     <br>
