--- a/src/main/resources/templates/new_product.html
+++ b/src/main/resources/templates/new_product.html
@@ -3,13 +3,13 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{page_layout/layout}">
-<header layout:fragment="header">
+<head>
     <meta charset="UTF-8">
-    <title>Product</title>
-</header>
+    <title>Add New Product</title>
+</head>
 <body>
 <section layout:fragment="main-content">
-    <form th:action="@{/product/new}" th:object="${p1}" method="POST">
+    <form th:action="@{/product/new}" th:object="${product}" method="POST">
         <h1>Add A New Product</h1>
         <div class="form-group">
             <label for="firstName">First Name</label>
@@ -23,19 +23,11 @@
 
         <div class="form-group">
             <label for="price">price</label>
-            <input type="number" id="price" class="form-control" th:field="*{price}"  required>
+            <input type="number" step="0.01" id="price" class="form-control" th:field="*{price}"  required>
         </div>
 
-        <div class="form-group">
-            <label for="type">Available-Restaurant</label>
-            <select id="type" name="restaurant" class="form-control" required>
-                <option disabled selected value="">--- Choose From Available Restaurant ---</option>
-                <option th:each="rest : ${restaurants}"
-                        th:value="${rest.getRestId()}"
-                        th:text="${rest.restName}">
-                </option>
-            </select>
-        </div>
+        <input type="hidden" th:field="*{restaurant}">
+
         <div class="form-group" th:if="${error != null}">
             <p style="color: red" th:text="${error}"></p>
         </div>
