--- a/src/main/resources/templates/rejected_orders_customers.html
+++ b/src/main/resources/templates/rejected_orders_customers.html
@@ -5,9 +5,10 @@
       layout:decorate="~{page_layout/layout}">
 <head>
     <meta charset="UTF-8">
-    <title>Catalog Of Orders</title>
+    <title>Rejected Orders</title>
 </head>
 <section layout:fragment="main-content">
+    <h1>Your Rejected Orders</h1>
     <div class="row justify-content-center">
         <table class="table">
             <thead>
@@ -19,7 +20,7 @@
                 <th>Full Name Of The Customer</th>
                 <th>Address</th>
                 <th>List of Products</th>
-                <th>Action</th>
+                <th>Reason Of The Decline</th>
             </tr>
             </thead>
             <tbody>
@@ -40,16 +41,13 @@
                         </li>
                     </ol>
                 </td>
-                <td>
-                    <span><a th:href="@{'/order/restaurant/'+${order.getOrder_id()}+'/accept' }" class="btn btn-success">Accept Order</a></span>
-                    <span><a th:href="@{'/order/restaurant/'+${order.getOrder_id()}+'/reject/message' }" class="btn btn-danger">Reject Order</a></span>
-                </td>
+                <td style="color: red;font-size: large" th:text="${order.getRejectReason()}"></td>
             </tr>
             </tbody>
         </table>
-    </div>
-    <div th:if="${ #lists.isEmpty(orders)}">
-        <p style="color:red;font-size: x-large">No Pending Orders Found Just Yet.</p>
+        <div th:if="${ #lists.isEmpty(orders)}">
+            <p style="color:red;font-size: x-large">No Rejected Orders Found Just Yet.</p>
+        </div>
     </div>
 </section>
 </html>
