--- a/src/main/resources/static/css/cover.css
+++ b/src/main/resources/static/css/cover.css
@@ -43,7 +43,7 @@ body {
 }
 
 .cover-container {
-    max-width: 42em;
+    max-width: 60em;
     width: 100%;
 }
 
@@ -51,21 +51,27 @@ body {
 /*
  * Header
  */
+
 .masthead {
     margin-bottom: 2rem;
     width: 100%;
-    overflow: hidden;}
+    overflow: hidden;
+}
 
 .masthead-brand {
     margin-bottom: 0;
+    font-size: 1.75rem;
+    font-weight: 700;
 }
 
+
 .nav-masthead .nav-link {
-    padding: .25rem 0;
+    padding: .25rem 0 .1rem 0;
     font-weight: 700;
+    font-size: 1rem;
     color: rgba(255, 255, 255, .5);
     background-color: transparent;
-    border-bottom: .25rem solid transparent;
+    border-bottom: .15rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
@@ -73,9 +79,22 @@ body {
     border-bottom-color: rgba(255, 255, 255, .25);
 }
 
+.nav-masthead .btn {
+    font-size: 1rem;
+    font-weight: 700;
+    border-bottom: none;
+    margin-left: 1.5rem;
+}
+
+.nav-masthead .btn:hover,
+.nav-masthead .btn:focus {
+    border-bottom: none;
+    text-decoration: none;
+}
+
 td {
-     white-space: nowrap;
-     vertical-align: middle;
+    white-space: nowrap;
+    vertical-align: middle;
 }
 
 .table th {
@@ -105,13 +124,16 @@ td {
 /*
  * Cover
  */
+
 .cover {
     padding: 0 1.5rem;
 }
+
 .cover .btn-lg {
     padding: .75rem 1.25rem;
     font-weight: 700;
 }
+
 textarea {
     width: 420px;
     min-height: 110px;
@@ -130,7 +152,6 @@ textarea:focus {
     outline: none;
     border-color: #4da3ff;
 }
-
 
 
 /*
