--- a/src/main/resources/templates/new_product.html
+++ b/src/main/resources/templates/new_product.html
@@ -13,17 +13,17 @@
         <h1>Add A New Product</h1>
         <div class="form-group">
             <label for="firstName">First Name</label>
-            <input type="text" id="firstName" th:field="*{name}" class="form-control" required>
+            <input type="text" id="firstName" th:field="*{name}" class="form-control" placeholder="Give The Name Of The Product" required>
         </div>
 
         <div class="form-group">
             <label for="description">description</label>
-            <input type="text" id="description" class="form-control" th:field="*{description}"  required>
+            <input type="text" id="description" class="form-control" th:field="*{description}" placeholder="Give Description of the product" required>
         </div>
 
         <div class="form-group">
             <label for="price">price</label>
-            <input type="number" step="0.01" id="price" class="form-control" th:field="*{price}"  required>
+            <input type="number" step="0.01" id="price" class="form-control" th:field="*{price}" placeholder="Give Price of the product" required>
         </div>
 
         <input type="hidden" th:field="*{restaurant}">
