Separate Ansible deployment and include Dockerfile and Compose in this project

--- a/src/main/resources/templates/show_restaurants.html
+++ b/src/main/resources/templates/show_restaurants.html
@@ -37,5 +37,8 @@
         </tr>
         </tbody>
     </table>
+    <div th:if="${ #lists.isEmpty(res)}">
+        <p style="color:red;font-size: x-large">No Available Restaurants Found Just Yet.</p>
+    </div>
 </section>
 </html>
